--- a/gps_to_map_frame_pkg/package.xml
+++ b/gps_to_map_frame_pkg/package.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>nmea_pkg</name>
+  <name>gps_to_map_frame_pkg</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="mhmmdokur@yandex.com">muhammed</maintainer>
   <license>TODO: License declaration</license>
 
   <depend>rclpy</depend>
+  <depend>tf2_ros</depend>
   <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
